; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_GetCreationModeFromSTGM.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_GetCreationModeFromSTGM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CREATE_ALWAYS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"STGM_CONVERT not implemented!\0A\00", align 1
@CREATE_NEW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"Invalid create mode!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @GetCreationModeFromSTGM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetCreationModeFromSTGM(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @STGM_CREATE_MODE(i32 %4)
  switch i32 %5, label %13 [
    i32 129, label %6
    i32 130, label %8
    i32 128, label %11
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @CREATE_ALWAYS, align 4
  store i32 %7, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = call i32 @FIXME(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @CREATE_NEW, align 4
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @CREATE_NEW, align 4
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = call i32 @ERR(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @assert(i32 0)
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %11, %8, %6
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @STGM_CREATE_MODE(i32) #1

declare dso_local i32 @FIXME(i8*) #1

declare dso_local i32 @ERR(i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
